--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000449">
     <meta name="description" content="Venez découvrir mes différents travaux grâce à mon portfolio">
     <meta >
-    <title>Portfolio</title>
+    <title>Portfolio | Maël Grosjean</title>
   </head>
   <body>
     <div id="app"></div>
