--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/m_icone.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Maël GROSJEAN">
-    <meta name="theme-color" content="#000449">
-    <meta name="description" content="Venez découvrir mes différents travaux grâce à mon portfolio">
-    <meta >
-    <title>Portfolio | Maël Grosjean</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEQYG2G4ZQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SEQYG2G4ZQ');
+  </script>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/m_icone.svg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Maël GROSJEAN">
+  <meta name="theme-color" content="#000449">
+  <meta name="description" content="Venez découvrir mes différents travaux grâce à mon portfolio">
+  <meta>
+  <title>Portfolio | Maël Grosjean</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
